--- a/addons/sourcemod/translations/chi/mt_experience.phrases.txt
+++ b/addons/sourcemod/translations/chi/mt_experience.phrases.txt
@@ -69,4 +69,8 @@
 		"#format"		"{1:N}"
 		"chi"			"{red}{1} 未公开游戏详情，MIX停止。\n{default}[{green}!{default}] 请确保所有mix成员都已公开游戏信息。"
 	}
+	"INVAILD_RESPONSE"
+	{
+		"chi"			"Steam返回数据异常，可能是API Key设置不正确，请联系服务器拥有者或插件开发者。"
+	}
 }
