--- a/addons/sourcemod/translations/mt_experience.phrases.txt
+++ b/addons/sourcemod/translations/mt_experience.phrases.txt
@@ -69,4 +69,8 @@
 		"#format"		"{1:N}"
 		"en"			"{red}{1} Undisclosed game details, MIX STOP. \n{default}[{green}! {default}] Please make sure that all mix members have made the game details public."
 	}
+	"INVAILD_RESPONSE"
+	{
+		"en"			"Steam returns abnormal data, probably because the API Key is not set correctly, please contact the server owner or plugin developer."
+	}
 }
