--- a/addons/sourcemod/translations/chi/mt_random.phrases.txt
+++ b/addons/sourcemod/translations/chi/mt_random.phrases.txt
@@ -1,11 +1,11 @@
 "Phrases"
 {
-	"VOTE_DISPLAY_MSG"
+	"VOTE_TITLE"
 	{
 		"chi"			"开始进行mix（随机分队）"
 	}
 
-	"VOTE_END_MSG"
+	"VOTE_MESSAGE"
 	{
 		"chi"			"即将进行mix..."
 	}
